@@ -59,7 +59,7 @@ public class AbsoluteLayoutContainer extends ComponentContainer {
       absolute.setSize(width, height);
       screenComponent.setSize(width - 2, height - 2);
       AbsoluteBoundsListenerManager.getInstance().notifyAbsoluteBoundsListener(this,
-            new ORBounds(absolute.getLeft(), absolute.getTop(), width, height));
+            new ORBounds(absolute.getLeft(), absolute.getTop(), absolute.getWidth(), absolute.getHeight()));
    }
 
    @Override
@@ -68,7 +68,7 @@ public class AbsoluteLayoutContainer extends ComponentContainer {
       // TODO: this should not be here, modifying to underlying model should not be done from visual object
       absolute.setPosition(left, top);
       AbsoluteBoundsListenerManager.getInstance().notifyAbsoluteBoundsListener(this,
-            new ORBounds(left, top, absolute.getWidth(), absolute.getHeight()));
+              new ORBounds(absolute.getLeft(), absolute.getTop(), absolute.getWidth(), absolute.getHeight()));
    }
 
    @Override
